fix: date picker z-index issue

--- a/src/assets/scss/react_dates_overrides.scss
+++ b/src/assets/scss/react_dates_overrides.scss
@@ -1,3 +1,7 @@
+.DateRangePicker_picker {
+  z-index: 999;
+}
+
 .DateRangePicker {
   &:hover {
     & .DateRangePickerInput {
